--- a/front/html/base.html
+++ b/front/html/base.html
@@ -1,55 +1,15 @@
 <!doctype html>
 <html lang="en" >
 <head>
-
-    <title>{% block title %}Weather app{% endblock %}</title>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script>
-    
-    let socket = new WebSocket("ws://127.0.0.1:8000/ws");
-
-  </script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
-    <header class="header">
-    <nav class="navbar fixed-top navbar-expand-lg">
-    <div class="container-fluid ">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-         <li class="nav-item lt-nav-hover px-2">
-             {% if user.is_authenticated %}
-             <a class="nav-link temp" href="#">Home</a>
-             {% endif %}
-         </li>
-        </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-       {% if user.is_authenticated %}
-          <li class="nav-item lt-nav-hover px-2">
-            <a class="nav-link" href="#">Logout</a>
-          </li>
-          <li class="nav-item  px-2">
-            <a class="nav-link" href="#">{{ user.username }}</a>
-          </li>
-
-       {% else %}
-           <li class="nav-item px-2">
-                <a href="auth" class="btn ">Login</a>
-                <a href="registration" class="btn btn-primary">Join Now</a>
-           </li>
-       {% endif %}
-        </ul>
-      </div>
-    </div>
-    </nav>
-    </header>
-    <div class="container body-content">
+    <div class="container">
       {% block content %}
       {% endblock %}    
     </div>
