--- a/front/html/chat.html
+++ b/front/html/chat.html
@@ -116,13 +116,19 @@
           <div class="chatHistory" x-data>
 
             <ul class="list-unstyled mb-0 ">
-              <template x-for="[key, item] in Object.entries($store.chat.getConverstationHistory)" ,
-                :key="key">
+              <template x-for="[key, item] in Object.entries($store.chat.getConverstationHistory)" , :key="key">
                 <a role="button" style="color: black;text-decoration: none;" @click="changeCurrentChat(item)">
                   <li class="userChat p-2 border-bottom d-flex justify-content-between">
                     <div class="d-flex flex-row">
-                      <img :src="item.profile_image" alt="avatar"
-                        class="rounded-circle d-flex align-self-center ms-3 shadow-1-strong" width="58">
+                      <div class="d-flex" style="position: relative;display:block;">
+
+                        <img :src="item.profile_image" alt="avatar"
+                          class="rounded-circle d-flex align-self-center ms-3 shadow-1-strong" width="58">
+                        <template x-if="item.peers.length == 2 && test(item.peers)">
+                          <img src="assets/online-icon.png" class="align-self-end me-auto" width="15"
+                            style="position: absolute; margin-left:80%; margin-bottom: 10%;">
+                        </template>
+                      </div>
                       <div class="pt-1 ms-3">
                         <p class="fw-bold mb-0" x-text="item.room_name"></p>
                         <template x-if="item.messages && item.messages.length > 0">
@@ -154,8 +160,7 @@
           <ul class="chat-scroller list-unstyled d-flex flex-column ms-4 mt-4" @scroll="scrollingHanlder()"
             id="chat-scroller" style="height: 90%;overflow-y:scroll;">
             <div class="mt-auto">
-              <template x-for="[id, item] in Object.entries($store.chat.currentChat.messages)"
-                :key="id">
+              <template x-for="[id, item] in Object.entries($store.chat.currentChat.messages)" :key="id">
                 <li class="chat-message d-flex mb-4">
                   <template x-if="('is_date' in item)">
                     <div class="card" style="border-radius: 15px;background-color: #ced4da;left:15%;">
